--- a/index.html
+++ b/index.html
@@ -915,7 +915,7 @@
           </div>
         </div>
         <div class="card-body">
-          <div class="table-responsive sejarah-table-wrap">
+          <div class="table-responsive sejarah-table-wrap sejarah-scroll">
             <table class="table table-hover align-middle">
               <thead class="table-light sticky-top">
                 <tr>
